Bug 1209724 - Cancel ImageBridge proxy functions if they are called too late. r=sotaro